--- a/src/notebooks/database_errors.ipynb
+++ b/src/notebooks/database_errors.ipynb
@@ -15,35 +15,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 feature_missing => one or some of the csv files are missing a required column.\n",
-    "# 2 values_missing => one or more values in a row are nulls.\n",
-    "# 3 unknown_categorical => expected value \"dinner\", \"lunch\", new value: \"drinks\".\n",
-    "# 4 out_of_range_numerical => wrong value for a feature, e.g:-1 for tips.\n",
-    "# 5 values_types_invalid => string value in a numerical column and vice versa.\n",
-    "# 6 values_outlier => 1000 people for a table.\n",
-    "# 7 values_bad_encoding => having unreadable character in CSV file e.g: à, ù, Ö, Ü.\n",
-    "# 8 csv_format => one or some csv files are seperated by other delimiter e.g: TSV using \\t\n",
-    "# 9 header_missing => in a csv file one or more of the label is missing e.g: \"tips\""
+    "# 1 missing_columns => one or some of the csv files are missing a required column.\n",
+    "# 2 missing_values => one or more values in a row are nulls.\n",
+    "# 3 unknown_categorical_values => expected value \"dinner\", \"lunch\", new value: \"drinks\".\n",
+    "# 4 unknown_numeric_values => wrong value for a feature, e.g:-1 for tips.\n",
+    "# 5 bad_data_type_values => string value in a numerical column and vice versa.\n",
+    "# 6 bad_csv_encoding => having unreadable character in CSV file e.g: à, ù, Ö, Ü.\n",
+    "# 7 bad_csv_format => one or some csv files are seperated by other delimiter e.g: TSV using \\t"
    ]
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-20T15:37:51.555489Z",
-     "start_time": "2025-02-20T15:37:51.525967Z"
+     "end_time": "2025-02-26T13:36:03.110322Z",
+     "start_time": "2025-02-26T13:36:00.279949Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
-    "data1 = {\n",
-    "    \"tips\" : [1.01, 1.66, 3.5, 3.31, 3.61],\n",
-    "    \"sex\" : [\"Female\", \"Male\", \"Male\", \"Male\", \"Female\"],\n",
-    "    \"smoker\" : [False, False, True, True, True],\n",
-    "    \"day\" : [\"Sat\", \"Sat\", \"Sun\", \"Sun\", \"Mon\"],\n",
-    "    \"time\" : [\"Dinner\", \"Lunch\", \"Lunch\", \"Dinner\", \"Drinks\"],\n",
-    "    \"size\" : [2, 3, 3, 2, 4]\n",
-    "}\n",
     "\n",
     "data2 = {\n",
     "    \"total_bill\" : [16.99, 10.34, -21.01, 23.68, 24.59],\n",
@@ -55,14 +45,14 @@
     "    \"size\" : [\"two\", 3, 3, 200, 4]\n",
     "}\n",
     "\n",
-    "df_error1 = pd.DataFrame(data1)\n",
-    "df_error2to7 = pd.DataFrame(data2)\n",
-    "df_error8_9 = pd.read_csv(\"../../tests/resources/test_csv_errors_8_9.csv\")\n",
-    "print(df_error1)\n",
+    "df_missing_column = pd.read_csv(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_missing_column.csv\")\n",
+    "df_error2 = pd.DataFrame(data2)\n",
+    "df_bad_csv = pd.read_csv(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_csv_errors.csv\")\n",
+    "print(df_missing_column)\n",
     "print()\n",
-    "print(df_error2to7)\n",
+    "print(df_error2)\n",
     "print()\n",
-    "print(df_error8_9)"
+    "print(df_bad_csv)"
    ],
    "id": "148c16e67fd82a0b",
    "outputs": [
@@ -70,12 +60,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   tips     sex  smoker  day    time  size\n",
-      "0  1.01  Female   False  Sat  Dinner     2\n",
-      "1  1.66    Male   False  Sat   Lunch     3\n",
-      "2  3.50    Male    True  Sun   Lunch     3\n",
-      "3  3.31    Male    True  Sun  Dinner     2\n",
-      "4  3.61  Female    True  Mon  Drinks     4\n",
+      "    tips   sex  smoker day    time  size\n",
+      "0  16.99  1.01  Female  No  Dinner     2\n",
+      "1  10.34  1.66    Male  No  Dinner     3\n",
+      "2  21.01  3.50    Male  No  Dinner     3\n",
+      "3  23.68  3.31    Male  No   Lunch     2\n",
+      "4  24.59  3.61  Female  No   Lunch     4\n",
       "\n",
       "   total_bill  tips     sex  smoker  day    time size\n",
       "0       16.99  1.01  Female   False  Sat  Dinner  two\n",
@@ -85,15 +75,23 @@
       "4       24.59  3.61  Female    True  Mon  Drinks    4\n",
       "\n",
       "  total_bill\\ttip\\tsex\\tsmoker\\t\\ttime\\tsize\n",
-      "0    16.99\\t1.01\\tFemale\\tNo\\tSun\\tDinner\\t2\n",
+      "0    16.99\\t1.01\\tFemæle\\tNo\\tSun\\tDinner\\t2\n",
       "1      10.34\\t1.66\\tMale\\tNo\\tSun\\tDinner\\t3\n",
-      "2       21.01\\t3.5\\tMale\\tNo\\tSun\\tDinner\\t3\n",
+      "2       21.01\\t3.5\\tMàle\\tNo\\tSun\\tDinner\\t3\n",
       "3      23.68\\t3.31\\tMale\\tNo\\tSun\\tDinner\\t2\n",
       "4    24.59\\t3.61\\tFemale\\tNo\\tSun\\tDinner\\t4\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6bdbbde65f7ff13d"
   }
  ],
  "metadata": {
