--- a/src/notebooks/database_errors.ipynb
+++ b/src/notebooks/database_errors.ipynb
@@ -10,6 +10,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "f6897533-e4f8-4490-b0a8-5e929b1e8ee5",
    "metadata": {
     "ExecuteTime": {
@@ -17,6 +18,7 @@
      "start_time": "2025-03-13T19:33:52.852329Z"
     }
    },
+   "outputs": [],
    "source": [
     "# 1 missing_columns => one or some of the csv files are missing a required column.\n",
     "# 2 missing_values => one or more values in a row are nulls.\n",
@@ -26,9 +28,7 @@
     "# 6 bad_csv_encoding => having unreadable character in CSV file e.g: à, ù, Ö, Ü.\n",
     "# 7 bad_delimiter => one or some csv files are seperated by other delimiter e.g: TSV using \\t.\n",
     "# 8 missing_header => one or more header are missing."
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "code",
@@ -96,15 +96,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d7f99c30ff1ae507",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-02T20:10:19.721374Z",
      "start_time": "2025-03-02T20:10:19.714899Z"
     }
    },
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": 4,
    "source": [
     "# set up empty error dict\n",
     "empty_errors = {\n",
@@ -117,14 +118,14 @@
     "    \"unknown_numeric_values\": None,\n",
     "    \"bad_data_type_values\": None,\n",
     "}"
-   ],
-   "id": "d7f99c30ff1ae507"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "dc65a554c1caba66",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def check_delimiter(filepath):\n",
     "    with open(filepath, \"r\", encoding=\"utf-8\") as file:\n",
@@ -133,58 +134,60 @@
     "    delimiter_counts = {d: header_line.count(d) for d in delimiters}\n",
     "    detected_delimiter = max(delimiter_counts, key=delimiter_counts.get)\n",
     "    return detected_delimiter"
-   ],
-   "id": "dc65a554c1caba66"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b6469bf6d55281dc",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def check_missing_headers(filepath, delimiter = \",\"):\n",
+    "def check_missing_headers(filepath, delimiter=\",\"):\n",
     "    expected_headers = [\"total_bill\", \"tip\", \"sex\", \"smoker\", \"day\", \"time\", \"size\"]\n",
     "    with open(filepath, \"r\", encoding=\"utf-8\") as file:\n",
     "        header_line = file.readline().strip()\n",
     "    detected_headers = [h.strip() for h in header_line.split(delimiter)]\n",
     "    missing_headers = list(set(expected_headers) - set(detected_headers))\n",
     "    return missing_headers"
-   ],
-   "id": "b6469bf6d55281dc"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "e35dee50c5d2f0c0",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def check_missing_columns(filepath, delimiter = \",\"):\n",
+    "def check_missing_columns(filepath, delimiter=\",\"):\n",
     "    with open(filepath, \"r\", encoding=\"utf-8\") as file:\n",
     "        header_line = file.readline().strip()\n",
     "        data_line = file.readline().strip()\n",
     "    num_columns = len(data_line.split(delimiter))\n",
     "    if num_columns < 7:\n",
     "        return \"Missing columns, need manual inspect\""
-   ],
-   "id": "e35dee50c5d2f0c0"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "16f55330b0c314a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:52:26.346251Z",
      "start_time": "2025-03-14T00:52:26.338924Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
-    "def check_bad_encode(filepath, d='\\t'):\n",
+    "def check_bad_encode(filepath, d=\"\\t\"):\n",
     "    df = pd.read_csv(filepath, sep=d)\n",
     "    bad_encode_values = {}\n",
     "    for col in df.columns:\n",
     "        rows = []\n",
     "        for index, value in df[col].items():\n",
     "            try:\n",
-    "                value.encode('utf-8')\n",
+    "                value.encode(\"utf-8\")\n",
     "            except AttributeError:\n",
     "                value = str(value)\n",
     "            except UnicodeEncodeError:\n",
@@ -192,25 +195,18 @@
     "        if rows:\n",
     "            bad_encode_values[col] = rows\n",
     "    return bad_encode_values"
-   ],
-   "id": "16f55330b0c314a4",
-   "outputs": [],
-   "execution_count": 79
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "457c30d34c8c741b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:52:37.011768Z",
      "start_time": "2025-03-14T00:52:36.995074Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "print(check_bad_encode(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_csv_errors.csv\"))\n",
-    "df3 = pd.read_csv(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_csv_errors.csv\")\n",
-    "print(df3)"
-   ],
-   "id": "457c30d34c8c741b",
    "outputs": [
     {
      "name": "stdout",
@@ -226,43 +222,55 @@
      ]
     }
    ],
-   "execution_count": 80
+   "source": [
+    "print(\n",
+    "    check_bad_encode(\n",
+    "        \"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_csv_errors.csv\"\n",
+    "    )\n",
+    ")\n",
+    "df3 = pd.read_csv(\n",
+    "    \"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_csv_errors.csv\"\n",
+    ")\n",
+    "print(df3)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "44232a00fc75089c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:36:24.949040Z",
      "start_time": "2025-03-14T00:36:24.939962Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "def check_missing_value(filepath, d = \",\"):\n",
+    "\n",
+    "\n",
+    "def check_missing_value(filepath, d=\",\"):\n",
     "    missing_values = []\n",
-    "    df = pd.read_csv(filepath, sep = d)\n",
+    "    df = pd.read_csv(filepath, sep=d)\n",
     "    if df.isnull().values.any():\n",
-    "        (rows,cols) = np.where(pd.isnull(df))\n",
+    "        (rows, cols) = np.where(pd.isnull(df))\n",
     "        if rows.any():\n",
-    "            for i in range (len(rows)):\n",
+    "            for i in range(len(rows)):\n",
     "                missing_values.append((rows[i], cols[i]))\n",
     "    return missing_values"
-   ],
-   "id": "44232a00fc75089c",
-   "outputs": [],
-   "execution_count": 54
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "dee67cfccfc466f7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:36:26.391201Z",
      "start_time": "2025-03-14T00:36:26.377612Z"
     }
    },
-   "cell_type": "code",
-   "source": "print(check_missing_value(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_missing_values.csv\"))",
-   "id": "dee67cfccfc466f7",
    "outputs": [
     {
      "name": "stdout",
@@ -272,40 +280,46 @@
      ]
     }
    ],
-   "execution_count": 55
+   "source": [
+    "print(\n",
+    "    check_missing_value(\n",
+    "        \"../../tests/resources/test_folder_1/db_errors_test_folder/test_missing_values.csv\"\n",
+    "    )\n",
+    ")"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "830f37aebb86f2e8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:29:13.487526Z",
      "start_time": "2025-03-14T00:29:13.405244Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
-    "def check_unknown_numeric_values(filepath, d = \",\"):\n",
+    "def check_unknown_numeric_values(filepath, d=\",\"):\n",
     "    numeric_columns = [\"total_bill\", \"tip\", \"size\"]\n",
     "    negative_values = {}\n",
-    "    df = pd.read_csv(filepath, sep = d)\n",
+    "    df = pd.read_csv(filepath, sep=d)\n",
     "    for col in numeric_columns:\n",
-    "        if df[df[col] < 0 ].values.any():\n",
-    "            negative_values[col] = df[df[col] < 0 ].index.tolist()\n",
+    "        if df[df[col] < 0].values.any():\n",
+    "            negative_values[col] = df[df[col] < 0].index.tolist()\n",
     "    return negative_values"
-   ],
-   "id": "830f37aebb86f2e8",
-   "outputs": [],
-   "execution_count": 42
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "efb45a8baa4dd4a5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:29:15.833230Z",
      "start_time": "2025-03-14T00:29:15.768106Z"
     }
    },
-   "cell_type": "code",
-   "source": "print(check_unknown_numeric_values(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_unknow_cat_num_values.csv\"))",
-   "id": "efb45a8baa4dd4a5",
    "outputs": [
     {
      "name": "stdout",
@@ -315,7 +329,13 @@
      ]
     }
    ],
-   "execution_count": 43
+   "source": [
+    "print(\n",
+    "    check_unknown_numeric_values(\n",
+    "        \"../../tests/resources/test_folder_1/db_errors_test_folder/test_unknow_cat_num_values.csv\"\n",
+    "    )\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -337,7 +357,7 @@
     }
    ],
    "source": [
-    "#Ignore\n",
+    "# Ignore\n",
     "#\n",
     "#\n",
     "# check if csv file have errors (missing header or bad delimiter)\n",
@@ -392,6 +412,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
    "id": "a41b8a3493cbbae3",
    "metadata": {
     "ExecuteTime": {
@@ -399,9 +420,10 @@
      "start_time": "2025-03-13T23:00:20.842177Z"
     }
    },
+   "outputs": [],
    "source": [
     "# check for bad_data_type_values\n",
-    "def check_bad_type_values(filepath, d = ','):\n",
+    "def check_bad_type_values(filepath, d=\",\"):\n",
     "    expected_types = {\n",
     "        \"total_bill\": float,\n",
     "        \"tip\": float,\n",
@@ -411,7 +433,7 @@
     "        \"time\": str,\n",
     "        \"size\": int,\n",
     "    }\n",
-    "    df = pd.read_csv(filepath, sep = d)\n",
+    "    df = pd.read_csv(filepath, sep=d)\n",
     "    bad_type_values = {}\n",
     "    for col, expected_type in expected_types.items():\n",
     "        if expected_type == int:\n",
@@ -429,12 +451,11 @@
     "\n",
     "    bad_type_values = {col: vals for col, vals in bad_type_values.items() if vals}\n",
     "    return bad_type_values"
-   ],
-   "outputs": [],
-   "execution_count": 34
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
    "id": "2a754beb1c9231e7",
    "metadata": {
     "ExecuteTime": {
@@ -442,13 +463,6 @@
      "start_time": "2025-03-13T23:01:05.971228Z"
     }
    },
-   "source": [
-    "print(check_bad_type_values(\n",
-    "    \"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_data_type.csv\"\n",
-    "))\n",
-    "df = pd.read_csv(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_data_type.csv\")\n",
-    "print(df)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -464,19 +478,32 @@
      ]
     }
    ],
-   "execution_count": 36
+   "source": [
+    "print(\n",
+    "    check_bad_type_values(\n",
+    "        \"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_data_type.csv\"\n",
+    "    )\n",
+    ")\n",
+    "df = pd.read_csv(\n",
+    "    \"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_data_type.csv\"\n",
+    ")\n",
+    "print(df)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5304d0cc1931f67d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:23:00.162044Z",
      "start_time": "2025-03-14T00:23:00.133784Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# check for unknown_categorical_values\n",
-    "def check_unknown_categorical_values(filepath, d = \",\"):\n",
+    "def check_unknown_categorical_values(filepath, d=\",\"):\n",
     "    expected_categories = {\n",
     "        \"sex\": {\"Female\", \"Male\"},\n",
     "        \"smoker\": {\"Yes\", \"No\"},\n",
@@ -484,7 +511,7 @@
     "        \"time\": {\"Lunch\", \"Dinner\"},\n",
     "    }\n",
     "\n",
-    "    df = pd.read_csv(filepath, sep = d)\n",
+    "    df = pd.read_csv(filepath, sep=d)\n",
     "    unknown_cat_values = {}\n",
     "\n",
     "    for col, expected_set in expected_categories.items():\n",
@@ -494,25 +521,18 @@
     "                unknown_cat_values[col] = bad_rows.index.tolist()  # Store row indices\n",
     "\n",
     "    return unknown_cat_values"
-   ],
-   "id": "5304d0cc1931f67d",
-   "outputs": [],
-   "execution_count": 39
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "aeb1ef0b3a316698",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-14T00:24:08.672644Z",
      "start_time": "2025-03-14T00:24:08.622471Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "print(check_unknown_categorical_values(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_unknow_cat_num_values.csv\"))\n",
-    "df1 = pd.read_csv(\"../../tests/resources/test_folder_1/db_errors_test_folder/test_unknow_cat_num_values.csv\")\n",
-    "print(df1)"
-   ],
-   "id": "aeb1ef0b3a316698",
    "outputs": [
     {
      "name": "stdout",
@@ -528,10 +548,21 @@
      ]
     }
    ],
-   "execution_count": 41
+   "source": [
+    "print(\n",
+    "    check_unknown_categorical_values(\n",
+    "        \"../../tests/resources/test_folder_1/db_errors_test_folder/test_unknow_cat_num_values.csv\"\n",
+    "    )\n",
+    ")\n",
+    "df1 = pd.read_csv(\n",
+    "    \"../../tests/resources/test_folder_1/db_errors_test_folder/test_unknow_cat_num_values.csv\"\n",
+    ")\n",
+    "print(df1)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
    "id": "144c4023044217c1",
    "metadata": {
     "ExecuteTime": {
@@ -539,16 +570,6 @@
      "start_time": "2025-03-13T23:04:14.047657Z"
     }
    },
-   "source": [
-    "# code to test before putting into checkers\n",
-    "# currently: check bad value type\n",
-    "df = pd.read_csv(\n",
-    "    \"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_data_type.csv\"\n",
-    ")\n",
-    "print(df)\n",
-    "df.head()\n",
-    "df.loc[~df[\"size\"].str.isdigit(), \"size\"].tolist()"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -573,7 +594,16 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 37
+   "source": [
+    "# code to test before putting into checkers\n",
+    "# currently: check bad value type\n",
+    "df = pd.read_csv(\n",
+    "    \"../../tests/resources/test_folder_1/db_errors_test_folder/test_bad_data_type.csv\"\n",
+    ")\n",
+    "print(df)\n",
+    "df.head()\n",
+    "df.loc[~df[\"size\"].str.isdigit(), \"size\"].tolist()"
+   ]
   }
  ],
  "metadata": {
